# py-poetry-base

./: README.md  pyproject.toml
tests/: test_py_poetry_base.py
